--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
 }
-
+apply plugin: 'kotlin-kapt'
 android {
     compileSdk 31
 
@@ -46,4 +46,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
+    //Room
+    implementation "androidx.room:room-runtime:2.3.0"
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    kapt "androidx.room:room-compiler:2.3.0"
+    //Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
 }
