--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-android-extensions'
 }
 apply plugin: 'kotlin-kapt'
+
 android {
     compileSdk 31
 
@@ -52,5 +53,6 @@ dependencies {
     kapt "androidx.room:room-compiler:2.3.0"
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
-
+    //itextpdf
+    implementation 'com.itextpdf:itextg:5.5.10'
 }
